...
        "constant" -> SpanStyle(color = colors.constant)
        "variable" -> SpanStyle(color = colors.function)
        "type" -> SpanStyle(color = colors.heading.first())
        "number" -> SpanStyle(color = colors.number)
        "operator" -> SpanStyle(color = colors.preprocessor)
        "preprocessor" -> SpanStyle(color = colors.preprocessor)
        "heading" -> SpanStyle(color = colors.heading.first(), fontWeight = FontWeight.Bold)
        "link" -> SpanStyle(color = colors.link, textDecoration = TextDecoration.Underline)
        "todo" -> SpanStyle(color = colors.todo, fontWeight = FontWeight.Bold)
        "done" -> SpanStyle(color = colors.done, fontWeight = FontWeight.Bold)
        "tag" -> SpanStyle(color = colors.tag)
        else -> null
    }
...
